<resources>
    <string name="app_name">Bookrate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_search">Szukaj</string>
    <string name="menu_send">Send</string>
    <string name="username">Username</string>
    <string name="useravatar">userAvatar</string>
    <string name="browse">Przeglądaj</string>
    <string name="read">Przeczytane</string>
    <string name="your_reviews">Twoje recenzje</string>
    <string name="settings">Ustawienia</string>
    <string name="tab_label1">Top Stories</string>
    <string name="tab_label2">Tech News</string>
    <string name="tab_label3">Cooking</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_hint">Napisz coś</string>
    <string name="button_text">Wyszukaj</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Register</string>
    <string name="searchSaveButton">Zapisz</string>
    <string name="loginMessage">Welcome! Please sign in or sign up</string>
    <string name="register">Register</string>
    <string name="RegisterMessage">Become a member</string>
    <string name="log_out">Log out</string>
    <string name="hello_blank_fragment2">You created fragment!</string>


</resources>
