<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_menu_browse"
            android:title="@string/browse" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_read"
            android:icon="@drawable/ic_menu_read"
            android:title="@string/read" />
        <item
            android:id="@+id/nav_review"
            android:icon="@drawable/ic_menu_review"
            android:title="@string/your_reviews" />


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings" />

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
