<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_search">

    <fragment
        android:id="@+id/nav_browse"
        android:name="com.example.bookrate.ui.browse.BrowseFragment"
        android:label="@string/browse"
        tools:layout="@layout/fragment_browse" />

    <fragment
        android:id="@+id/nav_read"
        android:name="com.example.bookrate.ui.read.ReadFragment"
        android:label="@string/read"
        tools:layout="@layout/fragment_read" />

    <fragment
        android:id="@+id/nav_review"
        android:name="com.example.bookrate.ui.review.ReviewFragment"
        android:label="@string/your_reviews"
        tools:layout="@layout/fragment_review" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.bookrate.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.bookrate.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.bookrate.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>